--- a/style.css
+++ b/style.css
@@ -426,7 +426,13 @@ a:hover {
 
 @media (max-width: 480px) {
   .site-title h1 {
-    font-size: 1.4rem;
+    font-size: 1rem;
+  }
+  .site-title h2{
+    font-size: 1rem;
+  }
+  .site-title h{
+    font-size: 1rem;
   }
 
   .global-nav ul {
